src/test/deca/syntax/invalid/homemade/smolFloatHex_synt.res
src/test/deca/syntax/invalid/homemade/smolFloatHex.deca:13:14: float literal too close to 0 while not being 0
